--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Nasim Farhan</title>
 
 <link rel="stylesheet" href="style.css">
-<link rel="shortcut icon" href="images/nosu.png" type="image/x-icon">
+<link rel="shortcut icon" href="nosu.png" type="image/x-icon">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
 
@@ -23,7 +23,7 @@
     <a class="button" target="_blank" href="https://www.facebook.com/nasimfarhanbds">Contact Me</a>
 </div>
 <div class="half-width">
-    <img src="images/img 1.png">
+    <img src="img 1.png">
 </div>
 
 </section>
@@ -31,7 +31,7 @@
 <section class="middle">
 
     <div class="half-width">
-        <img src="images/img 2.png">
+        <img src="img 2.png">
     </div>
 
     <div class="half-width">
