--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
     </div>
 </section>
 
-<footer><p> © Nasim Farhan 2021 | All rights deserved</p></footer>
+    <footer><p> <span id="copy"> © </span> Nasim Farhan 2021 | All rights deserved</p></footer>
 
-
+    <script>
+        document.getElementById("copy").addEventListener('click', function(){
+        console.log("clicked")}
+    </script>
 </body></b></html>
 </html>
