--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="half-width">
     <h1>Welcome To</h1>
     <h1> <span class="name-highlight">Nasim Farhan's</span> Website</h1>
-    <h2>Professional Graphic Designer</h2>
+    <h2>Graphic Designer</h2>
     <p><h3>Now I’m beginning level Graphic Designer. Every day I increase my skill. My dream goal wants to be a Full-stack Graphic Designer. That why I decide to complete the course of "Complete Graphic Design Course" from Projukti Team. I will not stop until become the Designing Hero.</h3></p>
     <a class="button" target="_blank" href="https://www.facebook.com/nasimfarhanbds">Contact Me</a>
 </div>
