--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 
     <div id="margin1" class="half-width shadow">
-        <h2>Baby Graphic Designer</h2>
+        <h2>nosu</h2>
         <h3 class="name-highlight">2020-2021 | Photoshop & Illustrator learner</h3>
        <p>They didn’t offer me a job. But I made their poster and showed it to them. They like it. And uploaded the content. It was fun working at there. I wish I can make biggest firm named <b>Nasim IT Firm</b>.</p>
     
